# FlooCast

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  EntryWithPlaceholder.py  FlooAuxInput.py  FlooDfuThread.py  FlooInterface.py  FlooInterfaceDelegate.py  FlooMessage.py  FlooMsgAc.py  FlooMsgAd.py  FlooMsgAm.py  FlooMsgBe.py  FlooMsgBm.py  FlooMsgBn.py  FlooMsgCp.py  FlooMsgCt.py  FlooMsgDc.py  FlooMsgEr.py  FlooMsgFd.py  FlooMsgFn.py  FlooMsgFt.py  FlooMsgIq.py  FlooMsgLa.py  FlooMsgLf.py  FlooMsgMd.py  FlooMsgOk.py  FlooMsgPl.py  FlooMsgSt.py  FlooMsgTc.py  FlooMsgUnknown.py  FlooMsgVr.py  FlooParser.py  FlooSettings.py  FlooStateMachine.py  FlooStateMachineDelegate.py  LICENSE  README.md  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  flocast.desktop  floocast.desktop  postinst  rules
locales/: messages.pot
locales/no/LC_MESSAGES/: messages.po
locales/th/LC_MESSAGES/: messages.po
locales/vi/LC_MESSAGES/: messages.po
scripts/: install-hooks  pre-push
src/floocast/: __main__.py  app.py  dfu_thread.py  settings.py
src/floocast/assets/: __init__.py
src/floocast/audio/: __init__.py  aux_input.py
src/floocast/gui/: __init__.py  app_controller.py  codec_formatter.py  constants.py  context_menu.py  delegate.py  state.py  toggle_switch.py  tray_icon.py
src/floocast/gui/panels/: __init__.py  audio_mode_panel.py  broadcast_panel.py  paired_devices_panel.py  settings_panel.py  version_panel.py  window_panel.py
src/floocast/protocol/: __init__.py  interface.py  interface_delegate.py  messages.py  parser.py  state_machine.py  state_machine_delegate.py
tests/: test_codec_formatter.py  test_messages.py  test_parser.py  test_settings.py  test_state_machine.py  test_state_machine_constants.py
